// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate cross-cloud workloads to Azure with migration reports and code conversion. AWS Lambda→Functions, GCP Cloud Run→Container Apps, Spring Boot→Container Apps. WHEN: migrate Lambda to Functions, migrate AWS to Azure, Lambda assessment, convert serverless, migration readiness, migrate from GCP, Cloud Run migration, Spring Boot to Container Apps, Azure Spring Apps to ACA.",
  "extractedKeywords": [
    "apps",
    "assess",
    "assessment",
    "azure",
    "boot",
    "cloud",
    "code",
    "container",
    "conversion",
    "convert",
    "cross-cloud",
    "deploy",
    "from",
    "function",
    "functions",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "readiness",
    "reports",
    "serverless",
    "spring",
    "when",
    "with",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assess",
  "assessment",
  "azure",
  "boot",
  "cloud",
  "code",
  "container",
  "conversion",
  "convert",
  "cross-cloud",
  "deploy",
  "from",
  "function",
  "functions",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "readiness",
  "reports",
  "serverless",
  "spring",
  "when",
  "with",
  "workloads",
]
`;
